# ChainMaid

./: CHANGELOG.md  README.md
.github/workflows/: build.yml
ChainMaid/: CMakeLists.txt
ChainMaid/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SideChainEngine.h
docs/: TECHNICAL_AUDIT.md
tests/: reference_notes.md
